--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ Thumbs.db
 
 # Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
 .idea/workspace.xml
+.idea/libraries
 .idea/tasks.xml
 .idea/datasources.xml
 .idea/dataSources.ids
