added registerSuccess activity and strings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
+        <activity
+            android:name=".RegisterSuccess"
+            android:label="@string/title_activity_register_success" >
+        </activity>
     </application>
 
 </manifest>
