--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    <!-- The following permissions are required to use NFC-->
+    <uses-permission android:name="android.permission.NFC"/>
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -33,8 +37,6 @@
         <activity
             android:name=".MainMenu"
             android:label="@string/app_name" >
-
-
         </activity>
 
         <meta-data
@@ -44,7 +46,6 @@
         <activity
             android:name=".PlayMap"
             android:label="@string/title_activity_play_map" >
-
         </activity>
         <activity
             android:name=".HowToPlay"
@@ -68,8 +69,13 @@
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".RunningNFC"
+            android:label="@string/title_activity_running_nfc" >
         </activity>
     </application>
 
